--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,14 +6,23 @@
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
+        <link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css"
             {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
 
         {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
+        <link rel="stylesheet" href="/design/design.css">
+             <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css'>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"> 
+        
+    {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% include "menu.html.twig"%}
+        <h1 class="border border-dark  rounded m-2 p-2 text-white bg-primary">{% block montitre %}{% endblock %}</h1>
+        {% block body %}
+        {% endblock %}
     </body>
 </html>
