--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -12,7 +12,7 @@
             <a class="nav-link" href="{{path('familles')}}">Familles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="{{path('continents')}}">Continents</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
